sgd/reproduction/playground/objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Service_Contract_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current physical location of the product. This is a lookup to an existing location record</description>
        <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>R00N70000001hzcqEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State/Province” part of the physical location address</description>
        <inlineHelpText>“State/Province” part of the physical location address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <description>Current status of the installed product.</description>
        <inlineHelpText>Current status of the installed product.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipped</fullName>
                    <label>出荷済み</label>
                </value>
                <value>
                    <fullName>Installed</fullName>
                    <label>稼動中</label>
                </value>
                <value>
                    <fullName>Deinstalled</fullName>
                    <label>休止中</label>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                    <label>廃棄</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <label>不明（移行データ）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the physical location address</description>
        <inlineHelpText>“Street” part of the physical location address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sub_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Location</label>
        <referenceTo>SVMXC__Sub_Location__c</referenceTo>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the top-most product in the installed product hierarchy.</description>
        <inlineHelpText>Serial/Lot number of the top-most product in the installed product hierarchy.</inlineHelpText>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty_Start_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. Start date of the latest warranty for this installed product. Derived automatically upon creating/updating warranty</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <label>Warranty</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip/Postal Code” part of the physical location address</description>
        <inlineHelpText>“Zip/Postal Code” part of the physical location address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Check__c</fullName>
        <label>Test Check</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Installed Product</label>
    <listViews>
        <fullName>SMAX_PS_All_Components</fullName>
        <columns>SVMXC__Company__c</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Site__c</columns>
        <columns>SVMXC__Product_Name__c</columns>
        <columns>SVMXC__Serial_Lot_Number__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Date_Shipped__c</columns>
        <columns>SVMXC__Date_Installed__c</columns>
        <columns>SVMXC__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Top_Level__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SVMXC__Parent__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>すべての機器</label>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Top_Installed_Products</fullName>
        <columns>SVMXC__Company__c</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Site__c</columns>
        <columns>SVMXC__Product_Name__c</columns>
        <columns>SVMXC__Serial_Lot_Number__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Date_Shipped__c</columns>
        <columns>SVMXC__Date_Installed__c</columns>
        <columns>SVMXC__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Top_Level__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SVMXC__Parent__c</field>
            <operation>equals</operation>
        </filters>
        <label>すべてのシステム</label>
    </listViews>
    <listViews>
        <fullName>SVMXC__All_Installed_Products</fullName>
        <columns>OBJECT_ID</columns>
        <columns>SVMXC__Site__c</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Product_Name__c</columns>
        <columns>SVMXC__Parent__c</columns>
        <columns>SVMXC__Serial_Lot_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Date_Shipped__c</columns>
        <columns>SVMXC__Date_Installed__c</columns>
        <columns>SVMXC__Status__c</columns>
        <columns>SVMXC__Street__c</columns>
        <columns>SVMXC__Country__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Installed Products</label>
    </listViews>
    <nameField>
        <label>Installed Product ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Products</pluralLabel>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <label>Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Top_Level</fullName>
        <active>true</active>
        <label>Top Level</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Account_chk_On_IP</fullName>
        <active>true</active>
        <errorConditionFormula>SVMXC__Company__c  &lt;&gt;  SVMXC__Site__r.SVMXC__Account__c</errorConditionFormula>
        <errorMessage>エンドユーザの設置場所のみ設定してください</errorMessage>
    </validationRules>
</CustomObject>